<resources>
    <string name="title_activity_password_edit">PasswordEditActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_name">KATI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_hint">아이디 입력</string>
    <string name="pw_hint">비밀번호 입력</string>
    <string name="login_button">로그인</string>
    <string name="id_auto_save_checkbox">아이디 저장</string>
    <string name="auto_login_checkbox">자동 로그인</string>
    <string name="find_id_button">아이디 찾기</string>
    <string name="find_pw_button">비밀번호 찾기</string>
    <string name="singup_button">회원가입</string>
    <string name="button_ok">확인</string>
    <string name="login_already_signed_dialog">이미 로그인 되어 있습니다.</string>
    <string name="login_already_signed_content_dialog">로그인 되어 있습니다.</string>
    <string name="login_success_dialog">성공적으로 로그인하였습니다.</string>
    <string name="login_success_content_dialog">성공적으로 로그인되었습니다.</string>
    <string name="login_failed_dialog">해당하는 유저가 없습니다.</string>
    <string name="login_failed_content_dialog">잘못 입력하였거나 해당하는 유저를 찾을 수 없습니다.</string>
    <string name="title_activity_log_out">LogOutActivity</string>
    <string name="kakao_login">카카오로 로그인</string>
    <string name="google_login">Google로 로그인</string>
    <string name="register_email_maintext">이메일을 입력해주세요</string>
    <string name="register_email_hint">example@plim.com</string>
    <string name="register_second_email_maintext">복구용 이메일을 입력해주세요</string>
    <string name="welcome_start">환영합니다</string>
    <string name="welcome_end">님!</string>
    <string name="register_finish_subtext">메일을 확인하면 가입 절차가 끝납니다!</string>
    <string name="register_name_maintext">이름을 알려주세요</string>
    <string name="register_name_hint">당신의 닉네임을 알려주세요!</string>
    <string name="register_password_maintext">비밀번호를 입력해주세요</string>
    <string name="register_password_hint">6자리 이상, 숫자+알파벳 조합</string>
    <string name="google_logout_maintext">구글 계정 로그아웃</string>
    <string name="google_logout_subtext">구글 계정이 정상적으로 로그아웃 되었습니다.</string>
    <string name="find_id_maintext">복구 이메일을 입력해주세요</string>
    <string name="find_id_subtext">*마이페이지 메뉴에서 등록할 수 있습니다.</string>
    <string name="find_user_email_dialog_title">복구 이메일으로 기존 아이디(이메일)가 발송되었습니다.</string>
    <string name="find_user_email_dialog_message">메일함에서 아이디를 확인해주세요.</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main">mainActivity</string>
    <string name="title_activity_new_withdrawal">NewWithdrawalActivity</string>
    <string name="withdrawalPasswordInputFragment_mainTextView_inputPassword">비밀번호를 입력해주세요</string>
    <string name="withdrawalPasswordInputFragment_editText_password">비밀번호</string>
    <string name="common_ok">확인</string>
    <string name="withdrawalPasswordInputFragment_dialogTitle_completed">회원 탈퇴가 완료되었습니다.</string>
    <string name="tempActivity_dialog_noLoginUser">로그인 된 유저가 없습니다.</string>
    <string name="withdrawalPasswordInputFragment_log_pleaseCheckInternet">회원탈퇴 실패! : 인터넷 연결을 확인해 주세요</string>
    <string name="withdrawalResultFragment_subTextView_withdrawalOk">성공적으로 탈퇴하였습니다</string>
    <string name="withdrawalResultFragment_mainTextView_thankYou">그동안 고마웠어요!</string>
    <string name="foodItem_productName_text">아이템 이름</string>
    <string name="foodItem_companyName_text">회사 이름</string>
    <string name="mainActivity_tempTitleTextView_text">각자 화면 확인 버튼</string>
    <string name="mainActivity_registerTestButton_text">register</string>
    <string name="mainActivity_tempButton_text">Temp</string>
    <string name="mainActivity_loginTestButton_text">login</string>
    <string name="mainActivity_searchTestButton_text">search</string>
    <string name="mainActivity_logOutTestButton_text">logout</string>
    <string name="mainActivity_detailTestButton_text">detail</string>
    <string name="mainActivity_changePWButton_text">changePW</string>
    <string name="loadingDialog_textView_text">loading</string>
    <string name="foodSearchList_premiumTextView_text1">프리미엄 제품</string>
    <string name="foodSearchList_premiumTextView_text2">AD</string>
    <string name="foodSearchResultList_sortMenu_text">정렬</string>
    <string name="foodSearchFieldFragment_searchEditText_text">검색어를 입력하세요</string>
    <string name="foodItem_scoreTextView_text">4.5</string>
    <string name="foodItem_reviewCountTextView_text">(100+)</string>
    <string name="searchFragment_allergyTextView_text">알레르기 필터</string>
    <string name="tempActivity_withdrawalButton_text">회원 탈퇴</string>
    <string name="tempActivity_logOutButton_text">로그아웃</string>
    <string name="tempActivity_mapButton_text">위치 정보</string>
    <string name="foodSearchRecommendationFragment_deleteAllButton_text">모두 지우기</string>
    <string name="foodSearchRecommendationFragment_rankSearchWordTitle_text">인기 검색어</string>
    <string name="foodSearchRecommendationFragment_recentSearchWordTextView_text">최근 검색어</string>
    <string name="foodSearchRecommendationFragment_emptyWordTextView_text">저장된 검색어가 없습니다.</string>
    <string name="detailProductInfoFragment_buyButton_text">온라인 구매처</string>
    <string name="detailProductInfoFragment_writeReviewButton_text">리뷰 작성하기</string>
    <string name="reviewItem_reviewTextTextView_text">리뷰 내용</string>
    <string name="reviewItem_reviewLikeTextView">120</string>
    <string name="reviewItem_reviewScoreTextView_text">3.0</string>
    <string name="reviewItem_EditDateTextView_text">2021년 05월 01일 11시 00분 작성</string>
    <string name="reviewItem_ProductNameTextView_text">제품명</string>
    <string name="tempActivity_userDataEditButton_text">유저 정보 수정</string>
    <string name="expandableItemListFragment_saveButton_text">저장하기</string>
    <string name="allergyViewFragment_noTextView_text">아직 설정된 알레르기 필터가 없습니다.</string>
    <string name="allergyViewFragment_editTextView_text">수정하기</string>
    <string name="userPageFragment_logoutButton_text">로그아웃</string>
    <string name="userPageFragment_myFavorite_text">내가 찜한 제품</string>
    <string name="userPageFragment_myReview_text">내가 쓴 리뷰</string>
    <string name="userPageFragment_myReply_text">내가 쓴 댓글</string>
    <string name="userPageFragment_myPost_text">내가 쓴 글</string>
    <string name="userPageFragment_restore_email_text">복구 이메일 등록</string>
    <string name="userPageFragment_customerCenter_text">고객 센터</string>
    <string name="userPageFragment_modifyUser_text">개인 정보 수정</string>
    <string name="userPageFragment_changePassword_text">비밀번호 변경</string>
    <string name="userPageFragment_notice_text">공지사항</string>
    <string name="userPageFragment_setting_text">설정</string>
    <string name="userPageFragment_default_text">0</string>
    <string name="userPageFragment_default_numOfFood">총 0개</string>
    <string name="foodSearchTextRecommendationFragment_recentSearchedRankTitleTextView_text">가장 많이\n검색하고 있어요</string>
    <string name="foodSearchTextRecommendationFragment_recentSearchedRankTimeTextView_text">5.26 01:00 기준</string>
    <string name="foodSearchTextRecommendationFragment_deleteAllButtonChip_text">전체삭제</string>
    <string name="foodSearchTextRecommendationFragment_recentSearchedTitleTextView_text">최근검색어</string>
    <string name="foodSearchTextRecommendationFragment_searchEditText_text">제품명,회사명 검색</string>
    <string name="userDataChangeFragment_fragmentTitle_text">내 정보 수정</string>
    <string name="userDataChangeFragment_editCompleteButton_text">완료</string>
    <string name="userDataChangeFragment_userProfileTextView_Text">편집</string>
    <string name="userDataChangeFragment_logoutButton_text">로그아웃</string>
    <string name="userDataChangeFragment_signoutButton_text">회원탈퇴</string>
    <string name="userDataChangeFragment_horizontalBarrier_text">|</string>
    <string name="userDataChangeFragment_userBirthEditText_text">1997.04.11</string>
    <string name="userDataChangeFragment_emailTitleTextView_text">이메일</string>
    <string name="userDataChangeFragment_emailDataTextView_text">test@test.com</string>
    <string name="userDataChangeFragment_secondEmailEditButton_tex">수정하기</string>
    <string name="userDataChangeFragment_allergyEditButton_text">수정하기</string>
    <string name="userDataChangeFragment_passwordEditButton_text">수정하기</string>
    <string name="userDataChangeFragment_addressTitleTextView_text">주소</string>
    <string name="userDataChangeFragment_userAddressEditText_text">경기도 ㅇㅇ시 ㅇㅇ동</string>
    <string name="userDataChangeFragment_secondEmailTitleTextView_text">복구이메일</string>
    <string name="userDataChangeFragment_allergyTitleTextView_text">알레르기</string>
    <string name="userDataChangeFragment_passwordTitleTextView_text">비밀번호</string>
    <string name="userDataChangeFragment_birthTitleTextView_text">생일</string>
    <string name="loginActivity_KatiIcon_text">KATI</string>
    <string name="loginActivity_emailTextView_text">이메일 입력</string>
    <string name="loginActivity_passwordTextView_text">비밀번호 입력</string>
    <string name="loginActivity_autoLoginCheckBox_text">자동 로그인</string>
    <string name="loginActivity_findIdTextView_text">아이디 찾기</string>
    <string name="loginActivity_findPasswordTextView_text">비밀번호 찾기</string>
    <string name="loginActivity_loginButton_text">로그인</string>
    <string name="loginActivity_areYouNewMessageTextView_text">KATI가 처음이신가요?</string>
    <string name="loginActivity_registerTextView_text">회원가입</string>
    <string name="signUpFragment_titleTextView_text">회원가입 정보</string>
    <string name="signUpFragment_emailEditText_text">이메일</string>
    <string name="signUpFragment_passwordEditText_text">비밀번호</string>
    <string name="signUpFragment_passwordEditText_text_toolbar">비밀번호 찾기</string>
    <string name="signUpFragment_nickNameEditText_text">닉네임</string>
    <string name="signUpFragment_submitButton_text">다음</string>
    <string name="passwordFindActivity_restoreEmailEditText_text">이메일</string>
    <string name="passwordFindActivity_submitButton_text">이메일 발송 하기</string>
    <string name="passwordFindActivity_resultMessageTextView_text">입력하신 이메일 주소로 비밀번호 재설정 메일이 발송됩니다.</string>
    <string name="myKatiFragment_loginRecommendTextView_text">로그인 하고 다양한 혜택을 받아보세요!</string>
    <string name="myKatiFragment_userNameTextView_text">정상</string>
    <string name="myKatiFragment_userNameTextView_suffix_text">님</string>
    <string name="myKatiFragment_signUpButton_text">회원가입</string>
    <string name="myKatiFragment_loginButton_text">로그인</string>
    <string name="myKatiFragment_title_toolbar_text">마이카티</string>
    <string name="myKatiFragment_allergyItem_text">알레르기 관리</string>
    <string name="myKatiFragment_reviewItem_text">리뷰 관리</string>
    <string name="myKatiFragment_katiAnnounceItem_text">카티 안내</string>
    <string name="myKatiFragment_serviceItem_text">서비스 약관</string>
    <string name="nameEditActivity_submitButton_text">닉네임 변경</string>
    <string name="nameEditActivity_editText_text">닉네임 입력 (10자 이내)</string>
    <string name="nameEditActivity_title_toolbar_text">닉네임 변경</string>
    <string name="restoreEmailActivity_messageTextView_Text">입력하신 이메일 주소로 복구 이메일이 발송됩니다.</string>
    <string name="restoreEmailActivity_submitButton_text">복구 이메일 변경</string>
    <string name="restoreEmailActivity_restoreEmailEditText_text">복구 이메일</string>
    <string name="restoreEmailActivity_toolbar_text">복구 이메일 변경</string>
    <string name="myInfoEditFragment_signOutTextView_text">회원탈퇴</string>
    <string name="myInfoEditFragment_logOutTextView_text">로그아웃</string>
    <string name="myInfoEditFragment_changeBirthButton_text">변경</string>
    <string name="myInfoEditFragment_changeAddressButton_text">변경</string>
</resources>