<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".domain2.user.account.signOut.TempActivity">


    <Button
        android:id="@+id/tempActivity_withdrawalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tempActivity_withdrawalButton_text" />

    <Button
        android:id="@+id/tempActivity_logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tempActivity_logOutButton_text" />

    <Button
        android:id="@+id/tempActivity_mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tempActivity_mapButton_text" />


</LinearLayout>